Bug 1675310 - Remove enabled and limit prefs for the event ping r=janerik

Recording events involved asking whether they should go in the event ping or
not, and also whether we hit the limit for how many are allowed in a ping.
These values are stored in prefs which aren't terribly accessible off the main
thread, even if the event recording is.

Both of these prefs have been set in stone in their default values for over two
years now, so we can safely remove them and their scaffolding. Huzzah!

Differential Revision: https://phabricator.services.mozilla.com/D96102