toolkit/components/telemetry/docs/internals/preferences.rst
@@ -1,5 +1,5 @@
-Preferences
-===========
+Preferences and Defines
+=======================
 
 Telemetry behaviour is controlled through the mozconfig defines and preferences listed here.
 
@@ -142,16 +142,6 @@ Preferences
 
   Set the maximum number of keys per process of the :ref:`Event Summary <events.event-summary>`
   :ref:`keyed scalars <scalars.keyed-scalars>`. Default is 500. Change requires restart.
-
-``toolkit.telemetry.eventping.enabled``
-
-  Whether the :doc:`../data/event-ping` is enabled.
-  Default is true except for GeckoView where it defaults to false. Change requires restart.
-
-``toolkit.telemetry.eventping.eventLimit``
-
-  The maximum number of event records permitted in the :doc:`../data/event-ping`.
-  Default is 1000.
 
 ``toolkit.telemetry.eventping.minimumFrequency``
 
